refactor interaction controller into job harvest controller
